# just-lists

./: pyproject.toml
incontext/: __init__.py  auth.py  details.py  items.py  lists.py  schema.sql
incontext/templates/: base.html
incontext/templates/details/: create.html  edit.html  index.html
incontext/templates/items/: create.html  edit.html  index.html  view.html
incontext/templates/lists/: edit.html  index.html  view.html
incontext/templates/lists/details/: edit.html  new.html
incontext/templates/lists/items/: edit.html  new.html  view.html
tests/: data.sql  test_db.py  test_lists.py
